--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,8 @@
 body{font-family:Arial, sans-serif; 
 	margin:0 auto;
 	max-width:2050px;}
-html{scroll-behavior:smooth; background-color:#00245f; color:#ffffff;}
-/*Style*/ 
+html{scroll-behavior:smooth; background-color:#002f79; color:#ffffff;}
+/*Style*/
 p, li{max-width:85ch;}
 h1, h2, h3{max-width:75ch;}
 p, li, h1, h2, h3, article img{margin-left:auto; margin-right:auto;}
@@ -12,7 +12,8 @@ img{border-radius:25px;
 	width:100%;
 	height:100%;
 	max-height:75vh;
-	object-fit:contain;}
+	object-fit:contain;
+	transition: all 0.2s ease;}
 .modal{position:fixed;
 	top:0;
 	left:0;
@@ -32,17 +33,17 @@ img{border-radius:25px;
 	padding:1rem 2rem;
 	width:fit-content;}
 /*Blur*/
-nav, footer{backdrop-filter: blur(15px); background-color: rgba(255, 255, 255, 0.3); border-top: 2px solid rgba(255, 255, 255, 0.3); border-bottom:2px solid rgba(255, 255, 255, 0.3)}
-header,.modal{backdrop-filter: blur(15px); background-color: rgba(0, 0, 0, 0.5);}
+nav, footer{backdrop-filter: blur(5px); background-color: rgba(255, 255, 255, 0.3); border-top: 1px solid rgba(255, 255, 255, 0.5); border-bottom: 1px solid rgba(255, 255, 255, 0.5); box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2), inset 0 4px 20px rgba(255, 255, 255, 0.3)}
+header,.modal{backdrop-filter: blur(5px); background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2), inset 0 4px 20px rgba(255, 255, 255, 0.3);}
 /*Welcome*/
-.welcometext{background:linear-gradient(#00245f,#000000); color:#ffffff; padding:10px 0 5px 0; border-bottom:solid 3px #006ee4;}
+.welcometext{background:linear-gradient(#002f79,#000000); color:#ffffff; padding:10px 0 5px 0; border-bottom:solid 3px #006ee4;}
 /*Blue*/
-.articles, aside, .sitemap{background:linear-gradient(#000000,#002f79,#0043ae,#00245f);}
+.articles, .sitemap{background:linear-gradient(#000000,#002f79,#0043ae,#002f79);}
 /*Img shadow*/
 img:not(.enlarged-image):hover{box-shadow:0 8px 30px 4px #007BFF; cursor:pointer;}
 img:not(.enlarged-image){box-shadow:0 4px 10px 0 #006ee4;}
 /*Rounded corners*/
-div, .sitemap a, .linkbutton, button, .articlecolumn a, .contact-form input[type="submit"] {border-radius:30px; text-decoration:none;}
+div, .sitemap a, .linkbutton, button, .articlecolumn a, .contact-form input[type="submit"], footer a {border-radius:30px; text-decoration:none;}
 /*Squared*/
 .articles, .nav, .modal, .welcometext{border-radius:0;}
 /*Header*/
@@ -77,8 +78,8 @@ nav{position:sticky;
 	text-align:center;
 	display:inline-block;
 	width:20%;}
-.nav a, .nav button, footer a{color:#000000; background: rgba(255, 255, 255, 0.7); font-size:16px;}
-.nav a:hover, .nav button:hover, footer a:hover{color:#ffffff;
+.nav a, .nav button{color:#fff; background-color: rgba(0, 0, 0, 0.3); font-size:16px; filter: drop-shadow(10px 10px 10px #000) brightness(115%);}
+.nav a:hover, .nav button:hover{color:#ffffff;
 	background: rgba(0, 110, 228, 0.8);
 	text-decoration:underline;
 	font-size:16px;
@@ -102,19 +103,21 @@ button:hover{cursor:pointer;}
 	padding: 5px;
 	margin: 5px;}
 /*Blue buttons*/
- .sitemap a, .linkbutton, .contact-form input[type="submit"], .modal .close-button, .articlecolumn a{color: #ffffff;border: 3px solid rgba(255, 255, 255, 0.7); background: rgba(0, 110, 228, 0.8);}
+ .sitemap a, .linkbutton, .contact-form input[type="submit"], .modal .close-button, .articlecolumn a, footer a{color: #fff; border: 1px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(6px);
+    filter: drop-shadow(10px 10px 10px #000) brightness(115%);
+	transition: all 0.05s ease;}
 /*Button hover*/
-.articlecolumn a:hover, button:hover, .linkbutton:hover, .contact-form input[type="submit"]:hover, .sitemap a:hover, .modal .close-button:hover, .articlecolumn a:hover{color: #000000;
-	background: rgba(255, 255, 255, 0.8);
-	border: 3px solid rgba(0, 110, 228, 0.8);
-	text-decoration: underline;
-	box-shadow: 0 4px 10px 0 #007BFF;}
+.articlecolumn a:hover, button:hover, .linkbutton:hover, .contact-form input[type="submit"]:hover, .sitemap a:hover, .modal .close-button:hover, .articlecolumn a:hover, footer a:hover{color: #fff;
+	background-color: rgba(0, 110, 228, 0.7);
+	border: 1px solid rgba(0, 110, 228, 0.5);
+	text-decoration: underline;}
 /*Card appearance*/
-.featuredarticle, .articlecolumn, .contact-form{box-sizing: border-box; 
-	box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.4);
-	background: rgba(255, 255, 255, 0.7); 
-	border: 1px solid rgba(255, 255, 255, 0.8);
-	color: #000000}
+.featuredarticle, .articlecolumn, .contact-form, Aside{box-sizing: border-box; 
+	background-color: rgba(150, 150, 150, 0.3); 
+	border: 1px solid rgba(255, 255, 255, 0.5);
+	box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2), inset 0 4px 20px rgba(255, 255, 255, 0.3)}
 .articles hr {background: rgba(255, 255, 255, 0.8); border: none; height: 1px;}
 /*Article showcase pages*/
 .articles {overflow: hidden;
@@ -122,6 +125,7 @@ button:hover{cursor:pointer;}
 	box-sizing: border-box;
 	text-align: center;}
 .articlerow {display: flex;
+	flex-direction: row;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;}
@@ -157,8 +161,10 @@ aside a {width: 99%;
 	padding: 10px 0;
 	margin: 0 0 0 1%;
 	display:inline-block;
-	color: #ffffff;}
-aside a:hover {background: linear-gradient(#007BFF, #006ee4, #0024c4);box-shadow: 0 4px 10px 0 #007BFF;}
+	color: #ffffff;
+    filter: drop-shadow(10px 10px 10px #000) brightness(115%);
+	transition: all 0.1s ease;}
+aside a:hover {background-color: rgba(0, 110, 228, 0.8);}
 aside h2 {margin: 2%; text-decoration: underline;}
 .Subheading {margin: 3px 3%;}
 /*Contact Form*/
@@ -190,11 +196,9 @@ aside h2 {margin: 2%; text-decoration: underline;}
 /*Footer*/
 footer {
 	color: #ffffff;
-	bottom: 0;
-	left: 0;
 	text-align: center;
 	margin-top: 5px;
-	font-size: 116%;
+	font-size: 110%;
 	display: inline-block;
 	width: 100%;
 	overflow:clip;}
@@ -291,8 +295,7 @@ th {background-color: #000000; color: #ffffff;}
 @media (prefers-color-scheme: dark){
 	.linkblack,.linkblackwhite {color: #ffffff;}
 	nav, footer{background-color: rgba(0, 0, 0, 0.3);}
-	.nav a, .nav button, footer a, .featuredarticle, .articlecolumn, .contact-form{color:#ffffff; background: rgba(0, 0, 0, 0.7);}
-	.articlecolumn a:hover, button:hover, .linkbutton:hover, .contact-form input[type="submit"]:hover, .sitemap a:hover, .modal .close-button:hover, .articlecolumn a:hover{color: #ffffff; background: rgba(0, 0, 0, 0.8);}
+	.featuredarticle, .articlecolumn, .contact-form, Aside{color:#ffffff; background: rgba(0, 0, 0, 0.7);}
 	th, td {border-bottom: #ffffff;}
 	th {background-color: #ffffff; color: #000000;}
 	article{background-color: #000000; color: #ffffff;}
@@ -303,4 +306,4 @@ pre {background-color: #f1f1f1;
 	width: 100%;
 	margin: auto;
 	overflow: scroll;}
-hr {background-color: #006ee4; border: none; height: 3px;}
+hr {background-color: #006ee4; border: none;}
